--- a/style.css
+++ b/style.css
@@ -18,6 +18,14 @@ p {
   margin-top: -15px;
 }
 
+.logo {
+  width: 25vw;
+  position: relative;
+  top: 25%;
+  left: 50%; 
+  transform: translate(-50%, -50%);
+}
+
 .sections {
   display: grid;
   grid-template-areas:
@@ -40,24 +48,328 @@ p {
   grid-template-rows: 19vh 25vh 50vh; 
 }
 
-  .aid {
-  grid-area: a;
-  background-color: #434c5e;;
-  width: 13.6vw;
+.rightSide {
+  display: grid;
+  grid-area: C;
   height: 100%;
+  width: 100%;
+  background-color: #434c5e;
+  grid-template-areas:
+  "x y z"
+  "w w w";
+  align-items: center;
+  grid-template-rows: 15vh auto; 
+}
+/* Settings */
+.settingformat {
+  grid-area: O;
+  display: grid;
+  height: 100%;
+  width: 100%;
+  grid-template-areas:
+  "E F"
+  "G H";
+  align-items: center;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 50% 50%;
 }
 
-.replay {
-  grid-area: b;
+p4 {
+  font-size: 40px;
+  font-family: 'Rubik', sans-serif;
+  color: #eceff4;
+}
+
+.musictext {
+  grid-area: E;
+  width: 6.3vw;
+  position: relative;
+  left: 50%; 
+  transform: translate(-50%, -30%);
+}
+
+.soundtext {
+  grid-area: G;
+  width: 6.3vw;
+  position: relative;
+  left: 50%; 
+  transform: translate(-50%, -30%);
+}
+
+.sound {
+  grid-area: H;
+  width: 6.3vw;
+  position: relative;
+  left: 50%; 
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+}
+
+.button-cover, .knobs, .layer
+{
+    grid-area: F;
+
+}
+
+.button
+{
+    position: relative;
+    top: 50%;
+    width: 150px;
+    height: 60px;
+    margin: -20px auto 0 auto;
+    overflow: hidden;
+    background-color: #ebf7fc;
+}
+
+.button.r, .button.r .layer
+{
+    border-radius: 100px;
+}
+
+.button.b2
+{
+    border-radius: 4px;
+}
+
+.checkbox
+{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    opacity: 0;
+    cursor: pointer;
+    z-index: 3;
+}
+
+.knobs
+{
+    z-index: 2;
+}
+
+.layer
+{
+    width: 100%;
+    background-color: #ebf7fc;
+    transition: 0.3s ease all;
+    z-index: 1;
+}
+
+/* Button 10 */
+#button-10 .knobs:before, #button-10 .knobs:after, #button-10 .knobs span
+{
+    position: absolute;
+    top: 4px;
+    width: 50px;
+    height: 28px;
+    font-size: 25px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 1;
+    padding: 12px 4px;
+    border-radius: 4px;
+    transition: 0.3s ease all;
+}
+
+#button-10 .knobs:before
+{
+    content: '';
+    left: 4px;
+    background-color: #729dc9;
+}
+
+#button-10 .knobs:after
+{
+    content: 'NO';
+    right: 4px;
+    color: #4e4e4e;
+}
+
+#button-10 .knobs span
+{
+    display: inline-block;
+    left: 4px;
+    color: #fff;
+    z-index: 1;
+}
+
+#button-10 .checkbox:checked + .knobs span
+{
+    color: #4e4e4e;
+}
+
+#button-10 .checkbox:checked + .knobs:before
+{
+    left: 88px;
+    background-color: #bf616a;
+}
+
+#button-10 .checkbox:checked + .knobs:after
+{
+    color: #fff;
+}
+
+#button-10 .checkbox:checked ~ .layer
+{
+    background-color: #d8dee9;
+}
+
+
+.button-cover2, .knobs2, .layer2
+{
+    grid-area: H;
+
+}
+
+.button
+{
+    position: relative;
+    top: 50%;
+    width: 150px;
+    height: 60px;
+    margin: -20px auto 0 auto;
+    overflow: hidden;
+    background-color: #d8dee9;
+}
+
+.button.r, .button.r .layer
+{
+    border-radius: 100px;
+}
+
+.button.b2
+{
+    border-radius: 4px;
+}
+
+.checkbox
+{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    opacity: 0;
+    cursor: pointer;
+    z-index: 3;
+}
+
+.knobs2
+{
+    z-index: 2;
+}
+
+.layer2
+{
+    width: 100%;
+    background-color: #d8dee9;
+    transition: 0.3s ease all;
+    z-index: 1;
+}
+
+/* Button 10 */
+#button-10 .knobs2:before, #button-10 .knobs2:after, #button-10 .knobs2 span
+{
+    position: absolute;
+    top: 4px;
+    width: 50px;
+    height: 28px;
+    font-size: 25px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 1;
+    padding: 12px 4px;
+    border-radius: 4px;
+    transition: 0.3s ease all;
+}
+
+#button-10 .knobs2:before
+{
+    content: '';
+    left: 4px;
+    background-color: #729dc9;
+}
+
+#button-10 .knobs2:after
+{
+    content: 'NO';
+    right: 4px;
+    color: #4e4e4e;
+}
+
+#button-10 .knobs2 span
+{
+    display: inline-block;
+    left: 4px;
+    color: #fff;
+    z-index: 1;
+}
+
+#button-10 .checkbox:checked + .knobs2 span
+{
+    color: #4e4e4e;
+}
+
+#button-10 .checkbox:checked + .knobs2:before
+{
+    left: 88px;
+    background-color: #bf616a;
+}
+
+#button-10 .checkbox:checked + .knobs2:after
+{
+    color: #fff;
+}
+
+#button-10 .checkbox:checked ~ .layer2
+{
+    background-color: #fcebeb;
+}
+
+
+/*  */
+.arrow {
+  grid-area: x;
+  background-color: #434c5e;
+  width: 6.3vw;
+  position: relative;
+  top: 54%;
+  left: 50%; 
+  transform: translate(-50%, -50%);
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.help {
+  grid-area: y;
   background-color: #434c5e;;
-  width: 13.6vw;
-  height: 100%;
+  width: 6.2vw;
+  position: relative;
+  top: 50%;
+  left: 50%; 
+  transform: translate(-50%, -50%);
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.settings {
+  grid-area: z;
+  background-color: #434c5e;;
+  width: 6.5vw;
+  position: relative;
+  top: 50%;
+  left: 50%; 
+  transform: translate(-50%, -50%);
+  transition: 0.3s;
+  cursor: pointer;
 }
 
 .points {
   grid-area: c;
   width: 95%;
-  height: 90%;
+  height: fit-content;
   background-color: #4c566a;
   border-color: #2e3440;
   border-radius: 10px;
@@ -92,15 +404,14 @@ p {
 }
 
 .nextPiece {
-  grid-area: C;
+  grid-area: w;
   background-color: #434c5e;
 }
 
 .box {
   position: relative;
-  top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0);
   
   width:20vw;
   height: 22vw;
@@ -113,16 +424,6 @@ p {
 .contents {
   padding-left: 1vw;
 } 
-
-.help {
-  width:7vw;
-  height:auto;
-  position: relative;
-  top: 50%;
-  left: 50%; 
-  transform: translate(-50%, -50%);
-  transition: 1s;
-}
 
 p2 {
   color: #eceff4;
@@ -148,19 +449,14 @@ p2 {
   width: 8vw;
 }
 
-.arrow {
-  width:8vw;
-  height:auto;
-  position: relative;
-  top: 50%;
-  left: 50%; 
-  transform: translate(-50%, -50%);
-  transition: 1s;
+.backSettings {
   cursor: pointer;
+  grid-area: N;
+  width: 8vw;
 }
 
 .help:hover {
-  transition: 1s; 
+  transition: 0.3s; 
   color: #ffffff;
   -webkit-transform: translateX(-50%) translateY(-50%) rotate(10deg); /* Safari */
   -moz-transform: translateX(-50%) translateY(-50%) rotate(10deg); /* Firefox 3.6 Firefox 4 */
@@ -177,13 +473,28 @@ p2 {
 
 
 .arrow:hover {
-  transition: 1s; 
+  transition: 0.3s; 
   color: #ffffff;
-  -webkit-transform: translateX(-50%) translateY(-50%) rotate(30deg); /* Safari */
-  -moz-transform: translateX(-50%) translateY(-50%) rotate(30deg); /* Firefox 3.6 Firefox 4 */
-  -ms-transform: translateX(-50%) translateY(-50%) rotate(30deg); /* IE9 */
-  -o-transform: translateX(-50%) translateY(-50%) rotate(30deg); /* Opera */
-  transform: translateX(-50%) translateY(-50%) rotate(30deg); /* W3C */  
+  -webkit-transform: translateX(-50%) translateY(-50%) rotate(20deg); /* Safari */
+  -moz-transform: translateX(-50%) translateY(-50%) rotate(20deg); /* Firefox 3.6 Firefox 4 */
+  -ms-transform: translateX(-50%) translateY(-50%) rotate(20deg); /* IE9 */
+  -o-transform: translateX(-50%) translateY(-50%) rotate(20deg); /* Opera */
+  transform: translateX(-50%) translateY(-50%) rotate(20deg); /* W3C */  
+  -webkit-transform-origin:center;
+  -moz-transform-origin:center;
+  -ms-transform-origin:center;
+  -o-transform-origin: center;
+  transform-origin:center;
+}
+
+.settings:hover {
+  transition: 0.3s; 
+  color: #ffffff;
+  -webkit-transform: translateX(-50%) translateY(-50%) rotate(15deg); /* Safari */
+  -moz-transform: translateX(-50%) translateY(-50%) rotate(15deg); /* Firefox 3.6 Firefox 4 */
+  -ms-transform: translateX(-50%) translateY(-50%) rotate(15deg); /* IE9 */
+  -o-transform: translateX(-50%) translateY(-50%) rotate(15deg); /* Opera */
+  transform: translateX(-50%) translateY(-50%) rotate(15deg); /* W3C */  
   -webkit-transform-origin:center;
   -moz-transform-origin:center;
   -ms-transform-origin:center;
@@ -232,6 +543,54 @@ p2 {
   grid-template-areas:
   "X Y"
   "Z Z";
+  z-index: 99999;
+}
+
+.settingscreen {
+  width: 50vw;
+  height: 34vw;
+  background-color: #4c566a;
+  border-color: #2e3440;
+  border-radius: 10px;
+  border-style: solid;
+  
+  position: absolute;
+  top: 45%;
+  left: 50%; 
+  transform: translate(-50%, -50%);
+  visibility:hidden;
+  padding-bottom: 15px;
+
+  display: grid;
+  grid-template-areas:
+  "N M"
+  "O O";
+  z-index: 99999;
+  grid-template-rows: min-content;
+
+  animation-fill-mode: forwards;
+  
+  visibility: hidden;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    visibility: hidden;
+    opacity: 0;
+  }
 }
 
 p3 {
@@ -244,6 +603,13 @@ p3 {
   grid-area: Y;
   padding-top: 2vw;
   padding-right: 6vw;
+}
+
+.controltextcontainersettings {
+  grid-area: M;
+  padding-top: 2vw;
+  padding-right: 6vw;
+  height: fit-content;
 }
 
 p1 {
